<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txtNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:text="@string/enter_node_value"
            android:textColor="@color/tint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/_0"
            android:inputType="number"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/tint"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/tint"
            android:text="@string/del"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnFind"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:backgroundTint="@color/tint"
            android:text="@string/find"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1.15"
            android:backgroundTint="@color/tint"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtIOTTree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/inorder_traversal_tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treeValsIo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtPOTTree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/post_order_traversal_tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treeValspo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtPrOTTree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/pre_order_traversal_tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treeValspr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="10dp"
        android:text="@string/tree"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>